@@ -6,11 +6,13 @@
 
 ********************************************************************************
 
-  January, 25 2017, 20:40
-  deviceServiceVersion = 1013354
+  January, 25 2017, 22:50
+  deviceServiceVersion = 1013355
 	
   [+] Added parameter capJrnPresent. Method getCpJrnPresent 
       returns capJrnPresent and mode.getCapJrnPresent
+	  
+  [-] Changed directIO command SMFPTR_DIO_READ_FS_PARAMS
 	  
 ********************************************************************************
 
